[package]
name = 'r_monero_network_crawler'
publish = false
version = '0.1.0'
edition = '2021'
rust-version = '1.65'

[lib]
crate-type = [ 'staticlib' ]
name = 'r_monero_network_crawler'

[[bin]]
name="monero-network-crawler"
path="src/main.rs"

[dependencies]
extendr-api = '*'

tokio = {version = "1.40", features = ["macros", "rt-multi-thread"]}
tower = { git = "https://github.com/Cuprate/tower.git", rev = "6c7faf0", default-features = false } # <https://github.com/tower-rs/tower/pull/796>
tracing-subscriber =  "0.3.18"
tracing = "0.1.40"
dashmap = "6.1.0"

cuprate-p2p-core = { git = "https://github.com/Cuprate/cuprate.git", branch = "expose-support-flags" }
cuprate-wire = { git = "https://github.com/Cuprate/cuprate.git", branch = "expose-support-flags" }
futures = "0.3.31"
rand = "0.9.0-beta.1"
clap = { version = "4.5.40", features = ["derive"] }
